Fix dropdown visibility

--- a/app/assets/stylesheets/supplementary.scss
+++ b/app/assets/stylesheets/supplementary.scss
@@ -84,6 +84,8 @@ html {
 .panel-heading,
 .modal-content,
 .bootstrap-datetimepicker-widget,
+.dropdown-menu,
+.dropdown-menu a,
 #header {
     background-color: var(--secondary-background-color) !important;
     color: var(--secondary-foreground-color) !important;
